<resources>
    <string name="app_name">JazzMusic</string>
    <string name="txtTitle">Jazz Music</string>
    <string name="txtArchiveDescription">The Felix E. Grant Jazz Archives at the University of the District of Columbia was established as a research and resource center for the study, preservation, and continued development of one of America’s greatest original cultural treasures—JAZZ. The Archives are maintained by the Jazz Studies Program, College of Arts and Sciences, and the Learning Resources Division. </string>
    <string name="imgArchive">Archive Image</string>
    <string name="btnPlaySong1">Play Song</string>
    <string name="btnPlaySong2">Play Song</string>
    <string name="btnPlaySong3">Play Song</string>
    <string name="btnPlaySong4">Play Song</string>
    <string name="imgSplash">Splash Image</string>
    <string name="btnListen">Listen to Collection</string>
    <string name="imgArtist1">Artist 1 Image</string>
    <string name="imgArtist2">Artist 2 Image</string>
    <string name="imgArtist3">Artist 3 Image</string>
    <string name="imgArtist4">Artist 3 Image</string>
    <string name="txtBio_hines">Once called \"the first modern jazz pianist\", Earl Hines differed from the stride pianists of the 1920s by breaking up the stride rhythms with unusual accents from his left hand. While his right hand often played octaves so as to ring clearly over ensembles, Hines had the trickiest left hand in the business, often suspending time recklessly but without ever losing the beat. One of the all-time great pianists, Hines was a major influence on Teddy Wilson, Jess Stacy, Joe Sullivan, Nat King Cole, and even to an extent on Art Tatum. He was also an underrated composer responsible for \"Rosetta,\" \"My Monday Date,\" and \"You Can Depend on Me,\" among others.</string>
    <string name="btnBio1">View Bio</string>
    <string name="btnBio2">View Bio</string>
    <string name="btnBio3">View Bio</string>
    <string name="btnBio4">View Bio</string>
    <string name="btnNextPage">Next Page</string>
    <string name="bntPreviousPage">Previous Page</string>
    <string name="btnBack1">Back to Artists</string>
    <string name="btnBack2">Back to Artists</string>
    <string name="btnBack3">Back to Artists</string>
    <string name="btnBack4">Back to Artists</string>
    <string name="txtName1">Earl \"Fatha\" Hines</string>
    <string name="txtName2">Sonny Stitt</string>
    <string name="txtName3">Art Farmer</string>
    <string name="txtName4">Horace Silver</string>
    <string name="btnVisitArchive1">See The Archives</string>
    <string name="btnVisitArchive2">See The Archives</string>
    <string name="btnVisitArchive3">See The Archives</string>
    <string name="btnVisitArchive4">See The Archives</string>
    <string name="txtBio_hines2">Earl Hines played trumpet briefly as a youth before switching to piano. His first major job was accompanying vocalist Lois Deppe, and he made his first recordings with Deppe and his orchestra in 1922. The following year, Hines moved to Chicago where he worked with Sammy Stewart and Erskine Tate\'s Vendome Theatre Orchestra. He started teaming up with Louis Armstrong in 1926, and the two masterful musicians consistently inspired each other. Hines worked briefly in Armstrong\'s big band (formerly headed by Carroll Dickerson), and they unsuccessfully tried to manage their own club. 1928 was one of Hines\' most significant years. He recorded his first ten piano solos, including versions of \"A Monday Date,\" \"Blues in Thirds,\" and \"57 Varieties.\" Hines worked much of the year with Jimmy Noone\'s Apex Club Orchestra, and their recordings are also considered classic. Hines cut brilliant (and futuristic) sides with Louis Armstrong\'s Hot Five, resulting in such timeless gems as \"West End Blues,\" \"Fireworks,\" \"Basin Street Blues,\" and their remarkable trumpet-piano duet \"Weather Bird.\" And on his birthday on December 28, Hines debuted with his big band at Chicago\'s Grand Terrace.</string>
    <string name="txtBio_hines3">A brilliant ensemble player as well as soloist, Earl Hines would lead big bands for the next 20 years. Among the key players in his band through the 1930s would be trumpeter/vocalist Walter Fuller, Ray Nance on trumpet and violin (prior to joining Duke Ellington), trombonist Trummy Young, tenor saxophonist Budd Johnson, Omer Simeon and Darnell Howard on reeds, and arranger Jimmy Mundy. In 1940, Billy Eckstine became the band\'s popular singer, and in 1943 (unfortunately during the musicians\' recording strike), Hines welcomed such modernists as Charlie Parker (on tenor), trumpeter Dizzy Gillespie, and singer Sarah Vaughan in what was the first bebop orchestra. By the time the strike ended, Eckstine, Parker, Gillespie, and Vaughan were gone, but tenor Wardell Gray was still around to star with the group during 1945-1946.</string>
    <string name="txtBio_silver1">From the perspective of the 21st century, it is clear that few jazz musicians had a greater impact on the contemporary mainstream than Horace Silver. The hard bop style that Silver pioneered in the \'50s is now dominant, played not only by holdovers from an earlier generation, but also by fuzzy-cheeked musicians who had yet to be born when the music fell out of critical favor in the \'60s and \'70s.</string>
    <string name="txtBio_silver2">Silver\'s earliest musical influence was the Cape Verdean folk music he heard from his Portuguese-born father. Later, after he had begun playing piano and saxophone as a high schooler, Silver came under the spell of blues singers and boogie-woogie pianists, as well as boppers like Thelonious Monkand Bud Powell. In 1950, Stan Getz played a concert in Hartford, Connecticut, with a pickup rhythm section that included Silver, drummer Walter Bolden, and bassist Joe Calloway. So impressed wasGetz, he hired the whole trio. Silver had been saving his money to move to New York anyway; his hiring by Getz sealed the deal.</string>
    <string name="txtBio_silver3">Silver worked with Getz for a year, then began to freelance around the city with such big-time players as Coleman Hawkins, Lester Young, and Oscar Pettiford. In 1952, he recorded with Lou Donaldson for the Blue Note label; this date led him to his first recordings as a leader. In 1953, he joined forces with Art Blakey to form a cooperative under their joint leadership. The band\'s first album, Horace Silver and the Jazz Messengers, was a milestone in the development of the genre that came to be known as hard bop. Many of the tunes penned by Silver for that record -- \"The Preacher,\" \"Doodlin\',\" \"Room 608\" -- became jazz classics. By 1956, Silver had left the Messengers to record on his own. The series of Blue Note albums that followed established him for all time as one of jazz\'s major composer/pianists. LPs likeBlowin\' the Blues Away and Song for My Father (both recorded by an ensemble that included Silver\'s longtime sidemen Blue Mitchell and Junior Cook) featured Silver\'s harmonically sophisticated and formally distinctive compositions for small jazz ensemble.</string>
    <string name="txtBio_silver4">Silver\'s piano style -- terse, imaginative, and utterly funky -- became a model for subsequent mainstream pianists to emulate. Some of the most influential horn players of the \'50s, \'60s, and \'70s first attained a measure of prominence with Silver -- musicians like Donald Byrd, Woody Shaw, Joe Henderson, Benny Golson, and the Brecker Brothers all played in Silver\'s band at a point early in their careers. Silver has even affected members of the avant-garde; Cecil Taylor confesses a Silverinfluence, and trumpeter Dave Douglas played briefly in a Silver combo.</string>
    <string name="txtBio_silver5">Silver recorded exclusively for Blue Note until that label\'s eclipse in the late \'70s, whereupon he started his own label, Silveto. Silver\'s \'80s work was poorly distributed. During that time he began writing lyrics to his compositions, and his work began to display a concern with music\'s metaphysical powers, as exemplified by album titles like Music to Ease Your Disease and Spiritualizing the Senses. In the \'90s, Silver abandoned his label venture and began recording for Columbia. With his re-emergence on a major label, Silver once again received a measure of the attention his contributions deserve. Certainly, no one ever contributed a larger and more vital body of original compositions to the jazz canon. Silver died in New York on June 18, 2014 at the age of 85. -- Artist Biography by Chris Kelsey from www.allmusic.com</string>
    <string name="txtBio_stitt">Charlie Parker has had many admirers and his influence can be detected in numerous styles, but few have been as avid a disciple as Sonny Stitt. There was almost note-for-note imitation in several early Stitt solos, and the closeness remained until Stitt began de-emphasizing the alto in favor of the tenor, on which he artfully combined the influences ofParker and Lester Young. Stitt gradually developed his own sound and style, though he was never far from Parker on any alto solo. A wonderful blues and ballad player whose approach influenced John Coltrane, Stitt could rip through an up-tempo bebop stanza, then turn around and play a shivering, captivating ballad. He was an alto saxophonist in Tiny Bradshaw\'s band during the early \'40s, then joined Billy Eckstine\'s seminal big band in 1945, playing alongside other emerging bebop stars like Gene Ammons and Dexter Gordon. Stitt later played in Dizzy Gillespie\'s big band and sextet. He began on tenor and baritone in 1949, and at times was in a two-tenor unit with Ammons. He recorded with Bud Powell and J.J. Johnson for Prestige in 1949, then did several albums on Prestige, Argo, and Verve in the \'50s and \'60s. Stitt led many combos in the \'50s, and re-joined Gillespie for a short period in the late \'50s. After a brief stint with Miles Davis in 1960, he reunited with Ammons and for a while was in a three-tenor lineup with James Moody. During the \'60s, Stitt also recorded for Atlantic, cutting the transcendent Stitt Plays Bird, which finally addressed the Parker question in epic fashion. He continued heading bands, though he joined the Giants of Jazz in the early \'70s. This group included Gillespie, Art Blakey, Kai Winding, Thelonious Monk, and Al McKibbon. Stitt did more sessions in the \'70s for Cobblestone, Muse, and others, among them another definitive date, Tune Up. He continued playing and recording in the early \'80s, recording for Muse, Sonet, and Who\'s Who in Jazz. He suffered a heart attack and died in 1982. -- Artist Biography by Bob Porter </string>
    <string name="txtCredits">All the materials provided on this app are intended for informational and educational purposes only.</string>
    <string name="btnCredits">Credits</string>
    <string name="btnMainMenu">Main Menu</string>
    <string name="txtReferrences">Credits</string>
    <string name="txtImages">The Splash screen image, UDC Jazz Archives Logo, and all artists images are taken from google image search.</string>
    <string name="txtAudio">All audio tracks featured in this app are purchased from iTunes. Only a portion of the original audio file was kept to save space. Inclusion of tracks are for educational purposes only.</string>
    <string name="txtBio">Artist biographies are taken from www.allmusic.com the use of content is for educational purposes only.</string>
    <string name="txtGroup4">CSCI 398 Group 4 Members: Ahmed Almatar, Manoj Subedi, Paolo Inocencion, and Zaid Alanazi</string>
</resources>