<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.androidbootcamp.jazzmusic.MainActivity">

    <Button
        android:id="@+id/btnListen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:padding="20dp"
        android:text="@string/btnListen" />

    <ImageView
        android:layout_width="300sp"
        android:layout_height="200sp"
        android:id="@+id/jazz_description"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/jazz_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtArchiveDescription"
        android:id="@+id/txtArchiveDescription"
        android:layout_below="@+id/jazz_description"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCredits"
        android:id="@+id/textView2"
        android:layout_above="@+id/btnCredits"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCredits"
        android:id="@+id/btnCredits"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>